small fix for overflow

--- a/client/src/pages/Tours/_Tours.scss
+++ b/client/src/pages/Tours/_Tours.scss
@@ -121,7 +121,7 @@
       div {
         .tourPara {
           max-height: 200px;
-          overflow: scroll;
+          overflow: auto;
         }
       }
     }
